<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neweventhome.ChooseEvent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cardView">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/MainToolbarStyle"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbarTitle"
                style="@style/ToolbarTitleStyle"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/margin_ultra_larger"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/add_event" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@id/cardView"
        style="@style/BaseCardViewStyle"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/elevation_small"
        app:cardElevation="@dimen/elevation_extra_small"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:padding="@dimen/padding_large">


            <Button
                android:id="@+id/btnAdultEmergence"
                style="@style/ButtonStyle"
                android:layout_width="160dp"
                android:text="@string/adult_emergence"
                app:layout_constraintBottom_toTopOf="@+id/btnHatching"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnHatching"
                style="@style/ButtonStyle"
                android:layout_width="160dp"
                android:text="@string/hatching"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="130dp"
                app:layout_constraintBottom_toTopOf="@id/btnFoundByHatching"
                app:layout_constraintTop_toBottomOf="@id/btnAdultEmergence" />

            <Button
                android:id="@+id/btnFoundByHatching"
                style="@style/ButtonStyle"
                android:layout_width="160dp"
                android:text="@string/found_by_hatching"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btnInundationWash"
                app:layout_constraintTop_toBottomOf="@id/btnHatching"
                tools:layout_editor_absoluteY="212dp" />

            <Button
                android:id="@+id/btnInundationWash"
                style="@style/ButtonStyle"
                android:layout_width="160dp"
                android:text="@string/inundation_wash"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnFoundByHatching"
                app:layout_constraintBottom_toTopOf="@id/btnAttemptedPredation"
                tools:layout_editor_absoluteY="294dp" />

            <Button
                android:id="@+id/btnAttemptedPredation"
                style="@style/ButtonStyle"
                android:layout_width="160dp"
                android:text="@string/attempted_predation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnInundationWash"
                app:layout_constraintBottom_toTopOf="@id/btnFoundByPredation"
                tools:layout_editor_absoluteY="294dp" />



            <Button
                android:id="@+id/btnFoundByPredation"
                style="@style/ButtonStyle"
                android:layout_width="160dp"
                android:text="@string/found_by_predation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnAttemptedPredation"
                app:layout_constraintBottom_toTopOf="@id/btnFoundByOther"
                tools:layout_editor_absoluteY="294dp" />

            <Button
                android:id="@+id/btnFoundByOther"
                style="@style/ButtonStyle"
                android:layout_width="160dp"
                android:text="@string/found_by_other"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnFoundByPredation"
                app:layout_constraintBottom_toTopOf="@id/btnVandalism"
                tools:layout_editor_absoluteY="294dp" />

            <Button
                android:id="@+id/btnVandalism"
                style="@style/ButtonStyle"
                android:layout_width="160dp"
                android:text="@string/vandalism"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnFoundByOther"
                app:layout_constraintBottom_toTopOf="@id/btnOtherEvent"
            tools:layout_editor_absoluteY="294dp" />

            <Button
                android:id="@+id/btnOtherEvent"
                style="@style/ButtonStyle"
                android:layout_width="160dp"
                android:text="@string/other_event"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnVandalism"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteY="294dp" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView">

        <Button
            android:id="@id/buttonPrevious"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/previous"
            style="@style/MediumSizeButtonStyle"

            android:background="@drawable/rounded_button_dark_two"
            />

        <Button
            android:id="@id/buttonCancelSurvey"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel_survey"
            style="@style/MediumSizeButtonStyle"
            android:background="@drawable/rounded_button_blue"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

